--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <html>
+  <title>Titulo</title>
   <body>
-    <div>teste</div>
+    <ul>
+      <li>Git</li>
+      <li>GitHub</li>
+    </ul>
   </body>
 </html>
