alterando index.html pelo GitHub

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
-  <title>Titulo</title>
+  <title>Assuntos Lab</title>
   <body>
     <ul>
       <li>Git</li>
       <li>GitHub</li>
-    </ul>
+      <li>Automated Tests</li>
+    <ul>
   </body>
-</html>  
+</html>
